     * Fix crash bug in Lua function SystemPath.DistanceTo
     * Fix long-broken mouse flight under Linux by disabling DGA. Set config
       option SDLUseDGAMouse=1 to revert to old behaviour (#1892, #5)
     * Fix system info view to ignore irrelevant mouse wheel scroll events (#1894)
     * Don't toggle labels and rotation damping while console is active (#1897, #1364)

   * UI changes
     * Improved appearance of Dropdown widget (#1789, #1766)
     * Fix layout of non-contributing widgets inside pack boxes (#1789)
     * UI widgets can now have keyboard shortcuts (#1821, #1841, #1840)

   * Internal changes
     * Improvements in text rendering performance (#1791)
     * Move MSVC headers and libs to pioneer-thirdparty repository (#1807)
     * Removed legact MissionStatus code from core (#1824)
     * Optimisation in access to ship type information (#1827)
     * Add support for high precision timing and floating-point exceptions (#1836, #1846)
     * Enable floating-point exceptions during AI processing (#1838)
     * Lua methods can be marked "protected", stopping them being called by
       user-supplied scripts and mods (#1706, #1869)
     * Rotation damping code cleaned up (#1866)
     * Various minor cleanups (#1867)
     * Allow point sprites to be rendered with different alpha blending modes (#1880)
     * Unknown tokens for Lua translations are no longer treated as errors (#1865, #1862)
     * Rename terrain noise macros to avoid global namespace polliution (#1883)
     * Various code improvements in frame handling and other things (#1812)
     * Cleanup SectorView system index usage (#1884)
     * Split FileSelectorDialog and LoadGame/SaveGame out of GameLoaderSaver (#1847)
     * Font optimisations and support for language-specific font overrides (#1899)

Alpha 29

   * New features
     * InfoView (F3) rewrite. Now has player name/face customisation and per-mission
       info screens (#1633, #1785)