@@ -49,6 +49,8 @@ Alpha 30
        option SDLUseDGAMouse=1 to revert to old behaviour (#1892, #5)
      * Fix system info view to ignore irrelevant mouse wheel scroll events (#1894)
      * Don't toggle labels and rotation damping while console is active (#1897, #1364)
+     * Don't save/restore GL_POINT_BIT attribute, it breaks GL state on old
+       Intel chips
 
    * UI changes
      * Improved appearance of Dropdown widget (#1789, #1766)
